# qtelepathy

./: CMakeLists.txt  qtelepathy.cpp  qtelepathy.hpp  test1.cpp
